# FPLayCity

./: .gitignore  README.md  pyproject.toml
.cursor/commands/: _md-common.md  docs-md.md  plan-md.md
.cursor/rules/: coding-principles.mdc  metadoc-guard.mdc  python-executor.mdc  update-md.mdc
data/: README.md
data/2024-2025/bootstrap/: response_body_2025-04-07T22:51:00.json  response_body_2025-04-18T20:35:08.json  response_body_2025-05-02T17:45:50.json  response_body_2025-05-06T13:51:23.json  response_body_2025-05-14T22:20:23.json  response_body_2025-05-24T20:18:47.json  response_body_2025-05-26T19:57:39.json
data/2024-2025/fixtures/: response_body_2025-04-07T14:03:00.json  response_body_2025-04-18T20:35:17.json  response_body_2025-05-02T17:45:51.json  response_body_2025-05-06T13:51:24.json  response_body_2025-05-14T22:20:24.json  response_body_2025-05-24T20:18:48.json  response_body_2025-05-26T19:57:40.json
data/2025-2026/rules/: draft.md  fpl.md
docs/: design_ns.md  glossary.md  metadoc.md  model_ns.md  news_ns.md  product_ns.md
plans/: news_fetch_scout.md
src/: mcp.py
src/fotmob/: README.md  __init__.py  load.py
src/fotmob/models/: README.md  fotmob.py  fotmob_metadata.py
src/fotmob/rotation/: README.md  fotmob_adapter.py  rotation_config.py  rotation_view.py
src/fpl/: aggregate.py  collection.py  fetch.py  main.py  query_engine.py
src/fpl/compute/: README.md  __init__.py  base.py  prediction.py
src/fpl/dump/: README.md  fdr.py  players.py
src/fpl/forecast/: README.md  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_immutable.py
(+23 files in other folders)
