[project]
name = "fplaycity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
    "mcp-server>=0.1.4",
    "mcp[cli,server]>=1.8.0",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E501",  # Line too long
    "W293",  # Blank line contains whitespace
    "W291",  # Trailing whitespace
]
